<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/Keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fill_top"
        android:backgroundTint="@color/blue"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="@dimen/main_container_spacing"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow style="@style/KeyboardRow">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_1"
                style="@style/KeyboardButton"
                android:text="@string/number_one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_2"
                style="@style/KeyboardButton"
                android:text="@string/number_two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_3"
                style="@style/KeyboardButton"
                android:text="@string/number_three" />
        </TableRow>

        <TableRow style="@style/KeyboardRow">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_4"
                style="@style/KeyboardButton"
                android:text="@string/number_four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_5"
                style="@style/KeyboardButton"
                android:text="@string/number_five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_6"
                style="@style/KeyboardButton"
                android:text="@string/number_six" />
        </TableRow>

        <TableRow style="@style/KeyboardRow">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_7"
                style="@style/KeyboardButton"
                android:text="@string/number_seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_8"
                style="@style/KeyboardButton"
                android:text="@string/number_eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_9"
                style="@style/KeyboardButton"
                android:text="@string/number_nine" />
        </TableRow>

        <TableRow style="@style/KeyboardRow">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_clear"
                style="@style/KeyboardButton"
                app:icon="@drawable/arrow_left" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_0"
                style="@style/KeyboardButton"
                android:text="@string/number_zero" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_ok"
                style="@style/KeyboardButton"
                android:text="@string/btn_ok" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>