<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/other_nav_graph"
    app:startDestination="@id/otherFragment">

    <fragment
        android:id="@+id/otherFragment"
        android:name="gr.novidea.weatherpay.ui.fragments.OtherFragment"
        android:label="Other"
        tools:layout="@layout/fragment_other_list">
        <action
            android:id="@+id/action_otherFragment_to_testFragment"
            app:destination="@id/testFragment" />
        <action
            android:id="@+id/action_otherFragment_to_transactionsListFragment"
            app:destination="@id/transactionsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/testFragment"
        android:name="gr.novidea.weatherpay.ui.fragments.TestFragment"
        android:label="@string/test"
        tools:layout="@layout/fragment_test_list">
        <action
            android:id="@+id/action_testFragment_to_beepFragment"
            app:destination="@id/beepFragment" />
        <action
            android:id="@+id/action_testFragment_to_printFragment"
            app:destination="@id/printFragment" />
        <action
            android:id="@+id/action_testFragment_to_networkFragment"
            app:destination="@id/networkFragment" />
    </fragment>
    <fragment
        android:id="@+id/beepFragment"
        android:name="gr.novidea.weatherpay.ui.fragments.BeepFragment"
        android:label="@string/beep"
        tools:layout="@layout/fragment_beep_list" />

    <fragment
        android:id="@+id/printFragment"
        android:name="gr.novidea.weatherpay.ui.fragments.PrintFragment"
        android:label="@string/print"
        tools:layout="@layout/fragment_print_list"/>
    <fragment
        android:id="@+id/networkFragment"
        android:name="gr.novidea.weatherpay.ui.fragments.NetworkFragment"
        android:label="@string/network"
        tools:layout="@layout/fragment_network" />
    <fragment
        android:id="@+id/transactionsListFragment"
        android:name="gr.novidea.weatherpay.ui.fragments.TransactionsFragment"
        android:label="@string/transaction_list"
        tools:layout="@layout/fragment_transactions_list" >
        <action
            android:id="@+id/action_transactionsListFragment_to_batchManagementFragment"
            app:destination="@id/batchManagementFragment" />
    </fragment>
    <fragment
        android:id="@+id/batchManagementFragment"
        android:name="gr.novidea.weatherpay.ui.fragments.BatchManagementFragment"
        android:label="@string/batch_management"
        tools:layout="@layout/fragment_batch_management" />
</navigation>