<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/main_container_spacing"
        android:paddingVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sn"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tid"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mid" />

        <TextView
            android:id="@+id/challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/main_container_spacing"
            android:textSize="@dimen/text_size_large"
            android:textAlignment="center"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tid"
            app:layout_constraintBottom_toTopOf="@id/amount"/>

        <gr.novidea.weatherpay.ui.components.LabeledText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_container_spacing"


            app:label="@string/temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge"
            app:value="@string/number_zero" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <gr.novidea.weatherpay.ui.components.Keyboard
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:keyFontSize="@dimen/text_size_mid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>