<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:padding="@dimen/main_container_spacing">

    <TextView
        android:id="@+id/networkLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet"
        android:textColor="@color/blueGrey"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/internetContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/networkLabel">

        <TextView
            android:id="@+id/networkStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toStartOf="@+id/netPipe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/netPipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pipe"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toStartOf="@+id/networkType"
            app:layout_constraintStart_toEndOf="@+id/networkStatus"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/networkType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/netPipe"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/text_space"
        app:dividerColor="@color/blueGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/internetContainer" />

    <TextView
        android:id="@+id/latencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latency"
        android:textColor="@color/blueGrey"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/latencyContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/latencyLabel">

        <TextView
            android:id="@+id/latencyStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ms"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toStartOf="@+id/latencyPipe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/latencyPipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pipe"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toStartOf="@+id/avrLatencyStatus"
            app:layout_constraintStart_toEndOf="@+id/latencyStatus"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/avrLatencyStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avr_ms"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/latencyPipe"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/text_space"
        app:dividerColor="@color/blueGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latencyContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>